new style by Yoann
click and see my friends

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <button>Je veux mon gif</button> <br>
 
-  <img src="" alt="" id="gif">
+  <div id="gifs"></div>
 
   <script type="text/javascript" src="app.js"></script>
   <script>
