add user input by Yoann

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <p>Clic sur le bouton pour obtenir un gif !</p>
-  
+  <input type="text">
   <button>Je veux mon gif</button> <br>
 
   <div id="gifs"></div>
